# polyvoice

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
assets/: voice_mode_prompt.md
assets/voices/: f1.txt
docs/: ARCHITECTURE.md  CODEX_HANDOFF.md  SPEC.md  VOICE_MODE.md  WINDOWS_APP_SPEC.md
scripts/: download-models.sh  install-hooks.sh  install-skills.sh  setup-venvs.sh
skills/polyvoice-vocab-curate/: SKILL.md
src/polyvoice/: config.py  logging.py  voice_mode.py
src/polyvoice/backends/stt/: base.py  faster_whisper.py  sensevoice.py  worker_entry.py
src/polyvoice/backends/tts/: base.py  cosyvoice3.py  (+2 more)
src/polyvoice/clients/: say_zh.py
src/polyvoice/hooks/: session_init.py  stop.py
src/polyvoice/server/: audio.py  stt.py  tts.py  worker_mgr.py
src/polyvoice/vocab/: adapters.py  cli.py  extract.py  heuristic_curate.py  ime_import.py  merge.py  postprocess.py  scan.py  secrets.py
tests/: test_config.py  test_streaming_wav.py  test_stt_roundtrip.py  test_vocab_extract.py  test_vocab_heuristic_curate.py  test_vocab_ime_import.py  test_vocab_merge.py  test_vocab_scan.py  test_vocab_secrets.py  test_voice_mode_hooks.py  test_worker_protocol.py
tests/fixtures/vocab/: claude-scan.jsonl
venvs/cosyvoice/: requirements.txt
venvs/sensevoice/: requirements.txt
vocab/: .gitignore  curation_prompt.md
windows-app/: README.md  pyproject.toml
windows-app/docs/: INSTALL_TEST.md
windows-app/polyvoice_app/: __init__.py  cli.py  config.py  dictation_controller.py  hook_installer.py  hotkey.py  logging_setup.py  main.py  paste.py  paths.py  postprocess.py  recorder.py  settings_gui.py  stt.py  tray.py  tts_client.py  vocab.py  wizard.py
windows-app/scripts/: build-embeddable.ps1  ci-build.ps1  download-model.py  make-installer.nsi
windows-app/tests/: test_config.py  test_dictation_controller.py  test_hook_installer.py  test_hotkey_smoke.py  test_installer_inputs.py  test_postprocess.py  test_stt.py  test_tts_client.py  test_vocab.py  test_wizard_validation.py
