[project]
name = "polyvoice"
version = "0.0.1"
description = "Pluggable Chinese-English voice framework for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "shuaige121" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
polyvoice-tts = "polyvoice.server.tts:main"
polyvoice-stt = "polyvoice.server.stt:main"
polyvoice-vocab = "polyvoice.vocab.cli:main"
say-zh = "polyvoice.clients.say_zh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyvoice"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
